--- a/cfdemo/manifest.yaml
+++ b/cfdemo/manifest.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -32,13 +32,44 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: busyBox-deployment
+  annotations:
+    app.komodor.com/app: https://github.com/stantonmitchell/k8playground
+  labels:
+    app: busyBox
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: busyBox
+  template:
+    metadata:
+      labels:
+        app: busyBox
+    spec:
+      containers:
+      - name: curl
+        image: busybox:1.35.0
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "250m"
+        command: ["sleep"]
+        args: ["9999"]
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
   name: curl-deployment
   annotations:
     app.komodor.com/app: https://github.com/stantonmitchell/k8playground
   labels:
     app: curl
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: curl
