--- a/cfdemo/manifest.yaml
+++ b/cfdemo/manifest.yaml
@@ -105,3 +105,23 @@ spec:
       port: 8081
       targetPort: 80
       nodePort: 30081
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: hello
+spec:
+  schedule: "1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          containers:
+          - name: hello
+            image: busybox:1.28
+            imagePullPolicy: Always
+            command:
+            - /bin/sh
+            - -c
+            - date; echo Hello from the Kubernetes cluster
+          restartPolicy: OnFailure
